--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,8 @@
     "mysql2": "^3.1.2",
     "nodemon": "^2.0.20",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "parallelshell": "^3.0.1"
   }
 }
